# ocr_mlflow

./: .dockerignore  .dvcignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  README_data.md  README_expirements.md  config.py  docker-compose.yml  improved_predict.py  predict.py  pyproject.toml  requirements.txt  retain_better_model.py  train.py
.dvc/: config
.github/workflows/: ci-cd.yml
app/: main.py
data/: processed.dvc  raw.dvc
models/: cnn_model.h5
src/: data_preprocessing.py  model_training.py  prediction.py
tests/: check_test_image.py  conftest.py  create_better_test_images.py  create_test_image.py  test_data_preprocessing.py  test_model_training.py
